# wasmtime-run-twice-error

./: Cargo.toml  README.md
guest/: Cargo.toml
guest-lib/: Cargo.toml
guest-lib/src/: bindings.rs  lib.rs
guest-lib/wit/: world.wit
guest-main/: Cargo.toml
host/: Cargo.toml
host/src/: main.rs
