[package]
name = "guest_lib"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:run-lib"

[package.metadata.component.target.dependencies]
"wasi:cli" = "0.2.4"